--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title><%= restaurant.name%></title>
 </head>
 <body>
   <h1>Home Page</h1>
+  <ul>
+    <%= restaurant.name%>
+    <%= restaurant.address%>
+    <%= restaurant.phone%>
+   </ul>
+   <% if(restaurant.isOpen === true) { %>
+    <p>Yes we are open!</p>
+<% } else { %>
+    <p> Sorry, we are closed!</p>
+<% } %>
+
 </body>
 </html>
