--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -10,7 +10,11 @@
     <h1>Full Menu</h1>
      <ul>
         <% menu.forEach((item,index) => { %>
-                 <li>Name: <%= item.name%>: Price: <%= item.price%>: Rating: <%= item.rating%>: Details: <%= item.details%></li>
+                 <li>Name: <%= item.name%> |
+                    Price: <%= item.price%> |
+                    Rating: <%= item.rating%> | 
+                    Details: <%= item.details%>
+                </li>
         <% }); %>
     </ul>
            
